modify the github nav width

--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -38,8 +38,12 @@ a:hover
 .width-full
   width: 100% !important
 
+.containerNar
+  width: 98%
+  margin: 0 auto
+
 .container
-  width: 980px
+  width: 1028px
   margin: 0 auto
   &::before, &::after
     display: table
