--- a/layout/_partial/navbar.ejs
+++ b/layout/_partial/navbar.ejs
@@ -3,7 +3,7 @@ var avatar = config.avatar || theme.avatar || 'https://octodex.github.com/images
 %>
 <nav class="navbar-wrapper">
   <div class="navbar">
-    <div class="container clearfix">
+    <div class="containerNar clearfix"><!--<div class="container  clearfix">-->
       <a href="<%= config.root %>" class="navbar-logo"><i class="fa fa-github"></i></a>
 
       <div class="navbar-search float-left desktop-only">
