--- a/source/css/navbar.styl
+++ b/source/css/navbar.styl
@@ -2,8 +2,8 @@
   position: relative
 
 .navbar
-  padding-top: 12px
-  padding-bottom: 12px
+  padding-top: 15px
+  padding-bottom: 15px
   color: rgba(255, 255, 255, 0.75)
   background-color: #24292e
   &-logo
@@ -24,8 +24,9 @@
       display: block
       padding: 5px 8px
       font-weight: 600
-      line-height: 20px
-      color: rgba(255, 255, 255, 0.75)
+      line-height: 21px
+      color: #FFFFFF
+      white-space: normal
       &:hover
         color: $white
         text-decoration: none
@@ -71,7 +72,7 @@
 .user-nav
   a
     padding: 5px 10px
-    font-size: 16px
+    font-size: 14px
     margin: 0 0 -10px 0
     &:hover
       color: $white
